--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=8000
 MONGO_URL="mongodb+srv://ojashgupta2103:12012045@medsync.gcesmit.mongodb.net/?retryWrites=true&w=majority"
+TOKEN_KEY="SECRET"
