--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Backend for MedSync app",
   "main": "app.js",
   "scripts": {
+    "start": "node app.js",
+    "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -17,6 +19,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
     "morgan": "^1.10.0",
+    "nodemon": "^3.0.2",
     "router": "^1.3.8"
   }
 }
