added more routes

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 PORT=8000
 MONGO_URL="mongodb+srv://ojashgupta2103:12012045@medsync.gcesmit.mongodb.net/?retryWrites=true&w=majority"
 TOKEN_KEY="SECRET"
+OPENAI_API_KEY="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"
